# PBCD-PlusPlus

./: .gitignore  CMakeLists.txt  libigl-notes.md
include/pbcd/: AnimationClip.hpp  Constraint.hpp  DeformableModel.hpp  DistanceConstraint.h  DistanceConstraint.hpp  Solver.hpp  VolumeConstraint.hpp
src/: main.cpp
src/pbcd/: DeformableModel.cpp  DistanceConstraint.cpp  Solver.cpp  VolumeConstraint.cpp
